@@ -74,10 +74,10 @@ class HEVC(SettingPanel):
         self.mode = "CRF"
         self.updating_settings = False
 
-        grid.addLayout(self.init_preset(), 1, 0, 1, 2)
-        grid.addLayout(self.init_tune(), 2, 0, 1, 2)
-        grid.addLayout(self.init_profile(), 3, 0, 1, 2)
-        grid.addLayout(self.init_pix_fmt(), 4, 0, 1, 2)
+        grid.addLayout(self.init_preset(), 0, 0, 1, 2)
+        grid.addLayout(self.init_tune(), 1, 0, 1, 2)
+        grid.addLayout(self.init_profile(), 2, 0, 1, 2)
+        grid.addLayout(self.init_pix_fmt(), 3, 0, 1, 2)
         grid.addLayout(self.init_modes(), 0, 2, 5, 4)
 
         breaker = QtWidgets.QHBoxLayout()
@@ -537,6 +537,7 @@ class HEVC(SettingPanel):
             x265_params=x265_params_text.split(":") if x265_params_text else [],
             hdr10plus_metadata=self.widgets.hdr10plus_metadata.text().strip().replace("\\", "/"),
             lossless=self.widgets.lossless.isChecked(),
+            extra=self.ffmpeg_extras,
         )
 
         if self.mode == "CRF":
