@@ -57,22 +57,19 @@ class VP9(SettingPanel):
 
         self.mode = "CRF"
 
-        grid.addLayout(self.init_modes(), 0, 1, 4, 4)
-        grid.addLayout(self.init_single_pass(), 6, 2, 1, 1)
-
-        grid.addLayout(self.init_quality(), 1, 0, 1, 1)
         grid.addLayout(self.init_speed(), 0, 0, 1, 1)
+        grid.addLayout(self.init_quality(), 1, 0, 1, 1)
+        grid.addLayout(self.init_pix_fmt(), 2, 0, 1, 1)
+        grid.addLayout(self.init_max_mux(), 3, 0, 1, 1)
+        grid.addLayout(self.init_profile(), 4, 0, 1, 1)
 
-        grid.addLayout(self.init_row_mt(), 4, 0, 1, 1)
-        grid.addLayout(self.init_pix_fmt(), 5, 0, 1, 1)
-
-        grid.addLayout(self.init_max_mux(), 6, 0, 1, 1)
-        grid.addLayout(self.init_profile(), 7, 0, 1, 1)
-
-        grid.addLayout(self._add_custom(), 9, 0, 1, 5)
+        grid.addLayout(self.init_modes(), 0, 1, 5, 4)
+        grid.addLayout(self.init_single_pass(), 6, 1, 1, 1)
+        grid.addLayout(self.init_row_mt(), 6, 3, 1, 1)
 
         grid.addWidget(QtWidgets.QWidget(), 8, 0)
         grid.setRowStretch(8, 1)
+        grid.addLayout(self._add_custom(), 9, 0, 1, 5)
 
         link_1 = link("https://trac.ffmpeg.org/wiki/Encode/VP9", t("FFMPEG VP9 Encoding Guide"))
         link_2 = link("https://developers.google.com/media/vp9/hdr-encoding/", t("Google's VP9 HDR Encoding Guide"))
