@@ -12,7 +12,7 @@ def build(fastflix: FastFlix):
     return [
         Command(
             f"{beginning}  -lossless {settings.lossless} -compression_level {settings.compression} "
-            f"-qscale {settings.qscale} -preset {settings.preset} {settings.extra} {ending}",
+            f"-qscale {settings.qscale} -preset {settings.preset} {ending}",
             ["ffmpeg", "output"],
             False,
             name="WebP",
